kurbernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-svc
  name: my-svc
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-80
    nodePort: 31420
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: my-deployment
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
