kurbernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: djdave.dhbw.schoeppi5.de
      http:
        paths:
          - backend:
              service:
                name: my-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
